force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Line Item</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>