force-app/main/default/objects/Expense__c/fields/Expense_Owner__c.field-meta.xml
<CustomField>
    <fullName>Expense_Owner__c</fullName>
    <label>Expense Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kent</fullName>
            </value>
            <value>
                <fullName>Jenny</fullName>
            </value>
            <value>
                <fullName>Susan</fullName>
            </value>
            <value>
                <fullName>Amy</fullName>
            </value>
            <value>
                <fullName>Jenny&#39;s Mom</fullName>
            </value>
            <value>
                <fullName>Kent&#39;s Parents</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Ethan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>