force-app/main/default/objects/Expense__c/fields/Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Amount__c</fullName>
    <description>Used in back end reporting</description>
    <formula>IF( RecordType.Name == &quot;Income&quot; , Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>