force-app/main/default/objects/Expense__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>How the expense was paid for</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jenny&#39;s Chase Sapphire</fullName>
            </value>
            <value>
                <fullName>Kent&#39;s Chase Amazon</fullName>
            </value>
            <value>
                <fullName>Jenny&#39;s Chase Standard</fullName>
            </value>
            <value>
                <fullName>Jenny&#39;s Citi</fullName>
            </value>
            <value>
                <fullName>PNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>