force-app/main/default/objects/Expense__c/recordTypes/Income.recordType-meta.xml
<RecordType>
    <fullName>Income</fullName>
    <active>true</active>
    <label>Income</label>
</RecordType>