force-app/main/default/objects/Expense__c/listViews/All_Income.listView-meta.xml
<ListView>
    <fullName>All_Income</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Expense_Owner__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expense__c.Income</value>
    </filters>
    <label>All Income</label>
</ListView>