force-app/main/default/objects/Expense__c/listViews/July_2019_Expenses.listView-meta.xml
<ListView>
    <fullName>July_2019_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Expense_Owner__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2019</value>
    </filters>
    <filters>
        <field>Expense_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>7/30/2019</value>
    </filters>
    <label>July 2019 Expenses</label>
</ListView>