force-app/main/default/objects/Expense__c/listViews/Unverified_Expenses.listView-meta.xml
<ListView>
    <fullName>Unverified_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Expense_Owner__c</columns>
    <columns>Amount__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Owner__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expense__c.Expense</value>
    </filters>
    <label>Unverified Expenses</label>
</ListView>